--- a/package.json
+++ b/package.json
@@ -23,15 +23,22 @@
     "gatsby-plugin-postcss": "^6.10.0",
     "gatsby-plugin-sitemap": "^6.10.0",
     "gatsby-source-filesystem": "^5.10.0",
+    "luxon": "^3.3.0",
     "postcss": "^8.4.24",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
-    "@types/node": "^20.2.6",
+    "@types/luxon": "^3.3.0",
+    "@types/node": "^20.3.1",
     "@types/react": "^18.2.9",
     "@types/react-dom": "^18.2.4",
     "typescript": "^5.1.3"
+  },
+  "overrides": {
+    "react-server-dom-webpack@0.0.0-experimental-c8b778b7f-20220825": {
+      "react": "^18.2.0"
+    }
   }
 }
